# jax-capability-analysis

./: .env.example  .gitignore  README.md  cli.sh  main.py  pyproject.toml
logs/: autograd-jax.txt  autograd-pytorch.txt  jit.txt  mnist-flax.txt  mnist-pytorch.txt  scipy-jax.txt  scipy-numpy.txt  xla-jax.txt  xla-numpy.txt  xla-pytorch.txt
src/: __init__.py  autograd_jax.py  autograd_pytorch.py  improvements.py  mnist_pytorch.py  scipy_numpy.py  xla_jax.py  xla_numpy.py  xla_pytorch.py
src/experiments/: __init__.py  autograd_jax.py  autograd_pytorch.py  jit_jax.py  mnist_flax.py  mnist_pytorch.py  scipy_jax.py  scipy_numpy.py  xla_jax.py  xla_numpy.py  xla_pytorch.py
src/utils/: __init__.py  assertions.py  deep_learning.py  linalg.py  timing.py  wrapper.py
tests/: test_jax_installation.py  test_torch_installation.py  test_type_annotations.py  test_utils.py
